--- a/portfolio_html/index.html
+++ b/portfolio_html/index.html
@@ -14,11 +14,11 @@
         </div>      
         <div class="topnav">
             <ul id="navbar"> 
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/contact.html">Contact |</a></li>
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/resume.html">Resume |</a></li>
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/skills.html">Skills |</a></li>
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/projects.html">Projects |</a></li>
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/index.html" class="active">Home |</a></li>
+                <li><a href="../portfolio_html/contact.html">Contact |</a></li>
+                <li><a href="../portfolio_html/resume.html">Resume |</a></li>
+                <li><a href="../portfolio_html/skills.html">Skills |</a></li>
+                <li><a href="../portfolio_html/projects.html">Projects |</a></li>
+                <li><a href="../portfolio_html/index.html" class="active">Home |</a></li>
             </ul>
         </div>   
         <div class="row">
@@ -54,13 +54,13 @@
                         </div>
                         <div class="column">
                             <figure>
-                                <img src="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/photos/vietnam.jpg" alt="vietnam" style="width:100%">
+                                <img src="../photos/vietnam.jpg" alt="vietnam" style="width:100%">
                                 <figcaption>Christmas time while teaching English in Vietnam.</figcaption>
                               </figure>
                         </div>
                         <div class="column">
                             <figure>
-                                <img src="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/photos/india.jpg" alt="india" style="width:100%">
+                                <img src="../photos/india.jpg" alt="india" style="width:100%">
                                 <figcaption>Yoga Teacher Training in India.</figcaption>
                             </figure>
                         </div>
@@ -70,7 +70,7 @@
             <div class="rightcolumn">
                 <div class="card">
                     <h2 id="profile">Profile</h2>
-                    <p1><img id="selfphoto" src="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/photos/george_garcia.jpeg" alt="George Garcia" width=auto height=333></p1><br>
+                    <p1><img id="selfphoto" src="../photos/george_garcia.jpeg" alt="George Garcia" width=auto height=333></p1><br>
                     <p2>Denver, CO</p2><br>
                     <p2 id="email"><a href="mailto:geogarcia852@gmail.com">geogarcia852@gmail.com</a></p2><br>
                     <p2>(415)936-3268</p2>
