--- a/portfolio_html/projects.html
+++ b/portfolio_html/projects.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>George Garcia | Portfolio | Projects </title>
-        <link rel="stylesheet" href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_css/projects.css" type="text/css">
+        <link rel="stylesheet" href="../portfolio_css/projects.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -14,11 +14,11 @@
         </div>      
         <div >
             <ul id="navbar"> 
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/contact.html">Contact |</a></li>
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/resume.html">Resume |</a></li>
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/skills.html">Skills |</a></li>
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/projects.html" class="active">Projects |</a></li>
-                <li><a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/index.html">Home |</a></li>
+                <li><a href="../portfolio_html/contact.html">Contact |</a></li>
+                <li><a href="../portfolio_html/resume.html">Resume |</a></li>
+                <li><a href="../portfolio_html/skills.html">Skills |</a></li>
+                <li><a href="../portfolio_html/projects.html" class="active">Projects |</a></li>
+                <li><a href="../portfolio_html/index.html">Home |</a></li>
             </ul>
         </div>  
         <div class="latest-project">
@@ -30,7 +30,7 @@
                 webpages with HTML and CSS.
             </p1> <br>
         <div class="image">
-            <a href="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/portfolio_html/index.html"><img src="/Users/ggarcia/Desktop/Coding Temple/portfolio_project/photos/page_screen_shot.png" alt="screen-shot" width="500" height="300"></a>
+            <a href="../portfolio_html/index.html"><img src="../photos/page_screen_shot.png" alt="screen-shot" width="500" height="300"></a>
         </div>
 
     </body>
