updated folder structure

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>George Garcia | Portfolio | Contact </title>
-        <link rel="stylesheet" href="../portfolio_css/contact.css" type="text/css">
+        <link rel="stylesheet" href="./contact.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -14,11 +14,11 @@
         </div>      
         <div class="topnav">
             <ul id="navbar"> 
-                <li><a href="../portfolio_html/contact.html" class="active">Contact |</a></li>
-                <li><a href="../portfolio_html/resume.html">Resume |</a></li>
-                <li><a href="../portfolio_html/skills.html">Skills |</a></li>
-                <li><a href="../portfolio_html/projects.html">Projects |</a></li>
-                <li><a href="../portfolio_html/index.html">Home |</a></li>
+                <li><a href="./contact.html" class="active">Contact |</a></li>
+                <li><a href="./resume.html">Resume |</a></li>
+                <li><a href="./skills.html">Skills |</a></li>
+                <li><a href="./projects.html">Projects |</a></li>
+                <li><a href="./index.html">Home |</a></li>  
             </ul>
         </div>  
         <div class="top">
