--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>George Garcia | Portfolio | Resume </title>
-        <link rel="stylesheet" href="../portfolio_css/resume.css" type="text/css">
+        <link rel="stylesheet" href="./resume.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -14,16 +14,16 @@
         </div>      
         <div class="topnav">
             <ul id="navbar"> 
-                <li><a href="../portfolio_html/contact.html">Contact |</a></li>
-                <li><a href="../portfolio_html/resume.html" class="active">Resume |</a></li>
-                <li><a href="../portfolio_html/skills.html">Skills |</a></li>
-                <li><a href="../portfolio_html/projects.html">Projects |</a></li>
-                <li><a href="../portfolio_html/index.html">Home |</a></li>
+                <li><a href="./contact.html">Contact |</a></li>
+                <li><a href="./resume.html" class="active">Resume |</a></li>
+                <li><a href="./skills.html">Skills |</a></li>
+                <li><a href="./projects.html">Projects |</a></li>
+                <li><a href="./index.html">Home |</a></li>  
             </ul>
         </div>  
         <div class="resume">
             <h3>To see a more detailed list of my experience, please see my</h3>
-            <h2><a href="../resume.pdf" target="_blank">RESUME</a></h2>
+            <h2><a href="./resume.pdf" target="_blank">RESUME</a></h2>
         </div>
     </body>
 </html>
